--- a/source/Acknowledgements/acknowledgements.tex
+++ b/source/Acknowledgements/acknowledgements.tex
@@ -2,4 +2,4 @@
 
 \setcounter{page}{2}
 
-Thank you to Maverick Woo who initially proposed the idea for this thesis and has guided me throughout this journey. I would also like to thank Patrick Tague for helping me through major milestones throughout this project and providing useful feedback when requested. I would also like to acknowledge the invaluable support my family and friends have provided me, without which none of this would be possible.
+Thank you to Maverick Woo who initially proposed the idea for this thesis and has guided me throughout this journey. I would also like to thank Patrick Tague for helping me through major milestones throughout this project and providing useful feedback when requested. I am forever grateful for the invaluable support my family and friends have provided me, without which none of this would be possible. This thesis was self-funded.
