--- a/source/thesis.tex
+++ b/source/thesis.tex
@@ -60,7 +60,7 @@
 %\supervisor{Dr. Nicolas Christin}
 %\advisor{Dr. Nicolas Christin}
 \department{Information Networking Institute} 
-\program{Master's in Information Security}% MSISTM, MSIN or MIST-X
+\program{Information Security}% MSISTM, MSIN or MIST-X
 %\departmenthead{Dr. Dena Haritos Tsamitis}
 %\dean{Dr. Pradeep Khosla}
 \previousdegreelist{B.Sc., Royal Holloway University of London}% Separate Multiple Entries with ' \\ '
