Update to final version

--- a/source/Bibliography/References.bib
+++ b/source/Bibliography/References.bib
@@ -1,6 +1,6 @@
 @article{ritchie,
 author = {Ritchie, Dennis M.},
-title = {The development of the C language},
+title = {{The development of the C language}},
 year = {1993},
 issue_date = {March 1993},
 publisher = {Association for Computing Machinery},
@@ -19,7 +19,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @misc{ANSI,
-title={The origin of ANSI C and ISO C},
+title={{The origin of ANSI C and ISO C}},
 url={https://blog.ansi.org/2017/09/origin-ansi-c-iso-c/},
 journal={The ANSI Blog},
 author={Kelechava, Brad},
@@ -29,7 +29,7 @@ note={Accessed on 2025-04-26}
 }
 
 @standard{ISO,
-title = {Programming languages -- C},
+title = {{Programming languages -- C}},
 number = {9899},
 series = {ISO/IEC},
 year = {1990},
@@ -40,14 +40,14 @@ type = {Standard}
 
 @misc{wg14,
 author    = {{ISO/IEC JTC1/SC22/WG14}},
-title     = {ISO/IEC JTC1/SC22/WG14 — C},
+title     = {{ISO/IEC JTC1/SC22/WG14 — C}},
 year      = {2025},
 url       = {https://www.open-std.org/jtc1/sc22/wg14/},
 note      = {Official working group for the C programming language standardization; Accessed on 2025-04-26}
 }
 
 @standard{c_standard,
-title      = {Information technology --- Programming languages --- C},
+title      = {{Information technology --- Programming languages --- C}},
 number     = {ISO/IEC 9899:2024},
 institution= {International Organization for Standardization},
 address    = {Geneva, Switzerland},
@@ -58,7 +58,7 @@ note       = {Accessed on 2025-04-26}
 
 @online{nasal_demons,
 author       = {Henry Spencer},
-title        = {Re: Why is this legal?},
+title        = {{Re: Why is this legal?}},
 year         = {1992},
 month        = feb,
 date         = {1992-02-22},
@@ -68,14 +68,14 @@ note         = {Message posted to comp.std.c; Accessed on 2025-04-26}
 
 @misc{LP64,
 author       = {{IBM}},
-title        = {ILP32 and LP64 data models and data type sizes},
+title        = {{ILP32 and LP64 data models and data type sizes}},
 howpublished = {\url{https://www.ibm.com/docs/en/zos/2.3.0?topic=environments-ilp32-lp64-data-models-data-type-sizes}},
 note         = {Accessed on 2025-04-26}
 }
 
 @book{secure_coding,
 author = {Seacord, Robert C.},
-title = {Secure Coding in C and C++},
+title = {{Secure Coding in C and C++}},
 year = {2013},
 isbn = {0321822137},
 publisher = {Addison-Wesley Professional},
@@ -83,7 +83,7 @@ edition = {2nd}
 }
 
 @misc{a5_cost,
-title={Arianespace aims high in Asia-Pacific},
+title={{Arianespace aims high in Asia-Pacific}},
 url={https://www.flightglobal.com/arianespace-aims-high-in-asia-pacific/120757.article},
 journal={Flight Global},
 publisher={Flight Global},
@@ -95,7 +95,7 @@ note={Accessed on 2025-04-26}
 
 @misc{a5,
 author      = {Jacques-Louis Lions and Inquiry Board},
-title       = {Report by the Inquiry Board on the Ariane 5 Flight 501 Failure},
+title       = {{Report by the Inquiry Board on the Ariane 5 Flight 501 Failure}},
 year        = {1996},
 institution = {European Space Agency (ESA)},
 url         = {https://web.archive.org/web/20000815230639/http://www.esrin.esa.it/htdocs/tidc/Press/Press96/ariane5rep.html},
@@ -103,7 +103,7 @@ note        = {Accessed on 2025-04-26}
 }
 
 @book{therac,
-title={A Gift of Fire: Social, Legal, and Ethical Issues for Computing and the Internet},
+title={{A Gift of Fire: Social, Legal, and Ethical Issues for Computing and the Internet}},
 author={Baase, S.},
 isbn={9780136008484},
 lccn={2007044857},
@@ -114,7 +114,7 @@ publisher={Pearson Prentice Hall}
 }
 
 @misc{x86,
-title={X86 architecture - windows drivers},
+title={{X86 architecture - windows drivers}},
 url={https://learn.microsoft.com/en-us/windows-hardware/drivers/debugger/x86-architecture},
 journal={Windows drivers | Microsoft Learn},
 author={Domars},
@@ -122,7 +122,7 @@ note={Accessed on 2025-04-26}
 }
 
 @manual{python_types,
-title = {Built-in Types — Python 3 Standard Library},
+title = {{Built-in Types — Python 3 Standard Library}},
 author = {{Python Software Foundation}},
 year = {2024},
 url = {https://docs.python.org/3/library/stdtypes.html},
@@ -130,7 +130,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @manual{python_overflow,
-title = {OverflowError — Python 3 Built-in Exceptions},
+title = {{OverflowError — Python 3 Built-in Exceptions}},
 author = {{Python Software Foundation}},
 year = {2024},
 url = {https://docs.python.org/3/library/exceptions.html#OverflowError},
@@ -139,14 +139,14 @@ note = {Accessed on 2025-04-26}
 
 @manual{java_int,
 author = {{Oracle Corporation}},
-title = {Class Integer},
+title = {{Class Integer}},
 year = {2017},
 url = {https://docs.oracle.com/javase/9/docs/api/java/lang/Integer.html#Integer-int-},
 note = {Accessed on 2025-04-26}
 }
 
 @manual{java_exact,
-title = {Class Math},
+title = {{Class Math}},
 author = {{Oracle Corporation}},
 year = {2022},
 url = {https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/lang/Math.html},
@@ -155,7 +155,7 @@ note = {Accessed on 2025-04-26}
 
 @misc{bigint,
 author = {{Oracle Corporation}},
-title = {BigInteger Class},
+title = {{BigInteger Class}},
 year = {2025},
 howpublished = {\url{https://docs.oracle.com/javase/8/docs/api/java/math/BigInteger.html}},
 note = {Accessed on 2025-04-26}
@@ -163,7 +163,7 @@ note = {Accessed on 2025-04-26}
 
 @book{rust_book,
 author = {Steve Klabnik and Carol Nichols},
-title = {The Rust Programming Language},
+title = {{The Rust Programming Language}},
 edition = {2nd},
 year = {2023},
 publisher = {No Starch Press},
@@ -173,7 +173,7 @@ isbn = {978-1718503106}
 
 @misc{rust_checked,
 author = {{The Rust Project Developers}},
-title = {num 0.4.3},
+title = {{num 0.4.3}},
 year = {2024},
 howpublished = {\url{https://docs.rs/num/latest/num/index.html}},
 note = {Accessed on 2025-04-26}
@@ -181,7 +181,7 @@ note = {Accessed on 2025-04-26}
 
 @manual{ftrapv,
 author = {{GNU Project}},
-title = {GCC Code Generation Options},
+title = {{GCC Code Generation Options}},
 year = {2024},
 howpublished = {\url{https://gcc.gnu.org/onlinedocs/gcc/Code-Gen-Options.html}},
 note = {Accessed on 2025-04-26}
@@ -189,7 +189,7 @@ note = {Accessed on 2025-04-26}
 
 @manual{clang-ftrapv,
 author = {{LLVM Project}},
-title = {Clang Command Line Argument Reference},
+title = {{Clang Command Line Argument Reference}},
 year = {2024},
 howpublished = {\url{https://clang.llvm.org/docs/ClangCommandLineReference.html}},
 note = {Accessed on 2025-04-26}
@@ -197,7 +197,7 @@ note = {Accessed on 2025-04-26}
 
 @online{gcc-ubsan,
 author = {Marek Polacek},
-title = {GCC Undefined Behavior Sanitizer - ubsan},
+title = {{GCC Undefined Behavior Sanitizer - ubsan}},
 year = {2014},
 url = {https://developers.redhat.com/blog/2014/10/16/gcc-undefined-behavior-sanitizer-ubsan},
 organization = {Red Hat Developers},
@@ -205,7 +205,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @manual{clang-ubsan,
-title = {UndefinedBehaviorSanitizer},
+title = {{UndefinedBehaviorSanitizer}},
 author = {{The Clang Team}},
 organization = {LLVM Project},
 year = {2025},
@@ -214,7 +214,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @manual{gcc-lang-ext,
-title = {GCC Built-in Functions to Perform Arithmetic with Overflow Checking},
+title = {{GCC Built-in Functions to Perform Arithmetic with Overflow Checking}},
 author = {{GCC Developer Community}},
 organization = {GNU Project},
 year = {2025},
@@ -223,7 +223,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @manual{clang-lang-ext,
-title = {Clang Language Extensions},
+title = {{Clang Language Extensions}},
 author = {{Clang Developer Community}},
 organization = {LLVM Project},
 year = {2025},
@@ -233,7 +233,7 @@ note = {Accessed on 2025-04-26}
 
 @misc{ckd_arith,
 author = {David Svoboda},
-title = {Towards Integer Safety},
+title = {{Towards Integer Safety}},
 institution = {WG14 – ISO/IEC JTC1/SC22/WG14},
 number = {N2683},
 year = {2021},
@@ -244,7 +244,7 @@ note = {Working Draft Proposal; Accessed on 2025-04-26}
 
 @misc{tf_loc,
 author = {{OpenHub contributors}},
-title = {TensorFlow - OpenHub},
+title = {{TensorFlow - OpenHub}},
 year = {2025},
 howpublished = {\url{https://openhub.net/p/tensorflow}},
 note = {Accessed on 2025-04-26}
@@ -252,14 +252,14 @@ note = {Accessed on 2025-04-26}
 
 @misc{car_loc,
 author = {David McCandless},
-title = {Million Lines of Code},
+title = {{Million Lines of Code}},
 year = {2013},
 howpublished = {\url{https://informationisbeautiful.net/visualizations/million-lines-of-code/}},
 note = {Accessed on 2025-04-26}
 }
 
 @online{macros,
-title = {Replacing text macros - C preprocessor},
+title = {{Replacing text macros - C preprocessor}},
 author = {{cppreference.com contributors}},
 year = {2025},
 url = {https://en.cppreference.com/w/c/preprocessor/replace},
@@ -267,7 +267,7 @@ note = {Accessed on 2025-04-26}
 }
 
 @online{compiler_support,
-title = {Compiler support for C23 - cppreference.com},
+title = {{Compiler support for C23 - cppreference.com}},
 author = {{cppreference.com contributors}},
 year = {2022},
 url = {https://en.cppreference.com/w/c/compiler_support/23},
@@ -276,7 +276,7 @@ note = {Accessed on 2025-04-26}
 
 @online{clang19,
 author = {{LLVM Project}},
-title = {Clang 19.1.0 Release Notes},
+title = {{Clang 19.1.0 Release Notes}},
 year = {2024},
 url = {https://releases.llvm.org/19.1.0/tools/clang/docs/ReleaseNotes.html},
 note = {Accessed on 2025-04-26}
@@ -284,7 +284,7 @@ note = {Accessed on 2025-04-26}
 
 @online{gcc14,
 author = {{GCC Team}},
-title = {GCC 14 Release Series},
+title = {{GCC 14 Release Series}},
 year = {2024},
 url = {https://gcc.gnu.org/gcc-14/},
 note = {Accessed on 2025-04-26}
@@ -292,7 +292,7 @@ note = {Accessed on 2025-04-26}
 
 @misc{semgrep,
 author = {{Semgrep, Inc.}},
-title = {Semgrep: Lightweight static analysis for many languages},
+title = {{Semgrep: Lightweight static analysis for many languages}},
 year = {2025},
 howpublished = {\url{https://semgrep.dev/}},
 note = {Accessed on 2025-04-26}
@@ -300,7 +300,7 @@ note = {Accessed on 2025-04-26}
 
 @misc{clang-tidy,
 author = {{LLVM Project}},
-title = {Extra Clang Tools documentation: Clang-Tidy},
+title = {{Extra Clang Tools documentation: Clang-Tidy}},
 year = {2025},
 howpublished = {\url{https://clang.llvm.org/extra/clang-tidy/}},
 note = {Accessed on 2025-04-26}
@@ -308,7 +308,7 @@ note = {Accessed on 2025-04-26}
 
 @misc{clang-interfaces,
 author = {{LLVM Project}},
-title = {Clang documentation: Choosing the Right Interface for Your Application},
+title = {{Clang documentation: Choosing the Right Interface for Your Application}},
 year = {2025},
 howpublished = {\url{https://clang.llvm.org/docs/Tooling.html}},
 note = {Accessed on 2025-04-26}
@@ -316,7 +316,7 @@ note = {Accessed on 2025-04-26}
 
 @standard{faa,
 author = {{Federal Aviation Administration}},
-title = {Software Approval Guidelines},
+title = {{Software Approval Guidelines}},
 institution = {U.S. Department of Transportation, Federal Aviation Administration},
 number = {Order 8110.49A},
 year = {2018},
@@ -328,7 +328,7 @@ url = {https://www.faa.gov/regulations_policies/orders_notices/index.cfm/go/docu
 
 @inproceedings{do,
 author = {Ben Brosgol and Cyrille Comar},
-title = {DO-178C: A New Standard for Software Safety Certification},
+title = {{DO-178C: A New Standard for Software Safety Certification}},
 booktitle = {Proceedings of the 22nd Systems and Software Technology Conference (SSTC)},
 year = {2010},
 month = apr,
