--- a/source/thesis.tex
+++ b/source/thesis.tex
@@ -85,10 +85,6 @@
 
 \begin{document}
 
-% Fill in the blanks in cur_ThesisSig.doc with your information and save in 
-% PDF format as signature.pdf 
-\includepdf[pages={1}]{signature.pdf}
-
 %-----------------------------------------------------------------------------%
 % TITLE PAGE -- provides UMI abstract title page & copyright if appropriate
 %-----------------------------------------------------------------------------%
@@ -145,7 +141,7 @@
 \bibliographystyle{Bibliography/IEEEtranS} %Formats bibliography
 \cleardoublepage
 \normalbaselines %Fixes spacing of bibliography
-\addcontentsline{toc}{chapter}{Bibliography} %adds Bibliography to your table of contents
+%\addcontentsline{toc}{chapter}{Bibliography} %adds Bibliography to your table of contents
 \bibliography{Bibliography/References} %your bibliography file - change the path if needed
 
 %-----------------------------------------------------------------------------%
